feat: tomfollery with backpacks, external and regular backpacks appear to work now, but first-person backpacks are still experiencing jank